--- a/quest-vid/index.html
+++ b/quest-vid/index.html
@@ -5,15 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <!-- Meta Pixel Code -->
-<script>
-  !function (w, d, t) {
-    w.TiktokAnalyticsObject=t;var ttq=w[t]=w[t]||[];ttq.methods=["page","track","identify","instances","debug","on","off","once","ready","alias","group","enableCookie","disableCookie"],ttq.setAndDefer=function(t,e){t[e]=function(){t.push([e].concat(Array.prototype.slice.call(arguments,0)))}};for(var i=0;i<ttq.methods.length;i++)ttq.setAndDefer(ttq,ttq.methods[i]);ttq.instance=function(t){for(var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++
-)ttq.setAndDefer(e,ttq.methods[n]);return e},ttq.load=function(e,n){var i="https://analytics.tiktok.com/i18n/pixel/events.js";ttq._i=ttq._i||{},ttq._i[e]=[],ttq._i[e]._u=i,ttq._t=ttq._t||{},ttq._t[e]=+new Date,ttq._o=ttq._o||{},ttq._o[e]=n||{};n=document.createElement("script");n.type="text/javascript",n.async=!0,n.src=i+"?sdkid="+e+"&lib="+t;e=document.getElementsByTagName("script")[0];e.parentNode.insertBefore(n,e)};
-  
-    ttq.load('CA227RBC77U8TVE65P5G');
-    ttq.page();
-  }(window, document, 'ttq');
-</script>
+
 <!-- End Meta Pixel Code -->  
 
   <link rel="stylesheet" href="style.css">
@@ -47,6 +39,7 @@
     background-repeat: no-repeat;
   }
   .container {
+    padding-top: 3%;
     width: 700px;
     max-width: 90%;
   }
@@ -193,23 +186,14 @@
   }
   </style>
   <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-N6MQSCZ');</script>
-  <!-- End Google Tag Manager -->
-</head>
-<body>
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N6MQSCZ"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+ 
   <!-- End Google Tag Manager (noscript) -->
   <div class="container">
     <div class="black">
       <div id="step1">
         <div class="question">
-          <h1>Pergunta 1</h1>
+          <h1>97,3% das pessoas não sabem que esse método existe...</h1>
+          <h2>Pergunta 1</h2>
           <p>Qual o seu gênero?</p>
           <h4>Selecione sua resposta abaixo</h4>
         </div>
