--- a/quest-vid/index.html
+++ b/quest-vid/index.html
@@ -257,7 +257,7 @@
       document.getElementById("step4").classList.remove("hide")
     }
     function redirect() {
-        location.href = "https://google.com/";     }
+        location.href = "https://zerobarrigaptc.website/";     }
   </script>
 </body>
 </html>
